# ucar_web_control

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  LICENSE  README.md  ROBOT_MANUAL.md  bug_notes.md  command_reference.md  conversation_history.md  nav_fix_tmp.launch  package.xml  robot_status_monitor.py  roslist.md  safe_control_with_status.py  safe_keyboard_control.py  simple_line_follower.py  start_base.sh  start_control.sh  start_lidar.sh  start_nav_clean.sh  start_sensors.sh  todo.md
NOTES/: bug_notes.md  command_reference.md  notes0505_2151.md  notes0514_2109.md  notes_05082126.md  notes_0519_1750.md  notes_0521_2203.md
docs/superpowers/plans/: 2026-05-05-line-follow.md  2026-05-05-web-patrol.md  2026-05-08-cpp-line-follower-centerline.md
docs/superpowers/specs/: 2026-05-05-line-follow-design.md  2026-05-05-web-patrol-design.md
maps/: ucar_map_20260501_202713.pgm  ucar_map_20260501_202713.yaml  ucar_map_20260501_202713_sealed.pgm  ucar_map_20260501_202713_sealed.yaml
src/: line_follower.cpp
systemd/: ucar_sensors.service  ucar_web.service
tests/: test_cpp_line_follower_file.py  test_line_follow.py  test_line_follower_cmake.py  test_line_record.py  test_patrol.py  test_person_follow_adapter.py  test_simple_line_follower.py  test_voice_control.py  test_web_panel_server_static.py  test_web_panel_template.py
vscode_backup/: extensions.txt
web_panel/: line_follow.py  line_record.py  patrol.py  person_follow_adapter.py  send_cmd_vel.sh  server.py  ucar_camera_bridge.py  voice_control.py
web_panel/templates/: index.html
